# Modern-Fortran-Finite-Element-Analysis-for-Dam-Reservoir-Foundation-system-

./: CMakeLists.txt  README.md
input/: INPUT-PF4-DAMRes.TXT  INPUT-PF4B5H.TXT  INPUT-PF5B-3GROUPS.TXT  INPUT-TR-DRM.TXT  INPUT-TR10B.TXT  INPUT-TR3B.TXT  INPUT-TR4B.TXT  INPUT.TXT
output/: FEM.CMP  FEM.DIS  FEM.HIS  FEM.TEN
src/: analysis.f95  element.f95  fem.f95  geometry.f95  main.f95  physics.f95  solver.f95  utils.f95
src/equations/: acoustic_bulk.f95  dam_res_boundary.f95  elastic_bulk.f95  found_trunc_boundary.f95  res_found_boundary.f95  res_trunc_boundary.f95
